Changelog
=========


4.1 - (unreleased)
----------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
  [voineali #4866]
* Feature: Added a CSS class on section tabs
  [voineali #4880]
* Feature: Redirects to daviz-edit if there is no DaViz view/chart configured
  [voineali #4882]
* Feature: Added a way to register additional charts as tabs in view mode.
  [voineali #4873]
* Feature: Added DavizPresentation content-type in order to easy aggregate
  internal and external exhibit sources
  [voineali #4866]

4.0-dev - (2011-11-07)
----------------------
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: Plone 4.x compatible
  [ichimdav, voineali #4234]
* Feature: Added exhibit 'properties' dict in generated JSON
  [voineali 4528]

1.4-dev - (unreleased)
----------------------
* Feature: Enabled daviz for eea.dataservice EEAFigureFile
  [voineali #4492]

1.3 - (2011-07-29)
------------------
* Feature: Added babel translator API and a custom translator:
  rdf-xml to exhibit-json
  [voineali #4416]
* Feature: Possibility to add external exhibit data sources like
  "Google Spreadsheet", "RDF/XML" and "External JSON".
  [voineali #4416]
* Feature: Added editable 'Lens' property to Tiles view in order
  to easily create custom Exhibit Lens Templates
  [voineali #4414]
* Feature: Added a way to reorder Exhibit Views
  [voineali #4177]
* Feature: Added a way to reorder or hide Exhibit Facets
  [voineali #4417]
* Feature: Possibility to add/remove facets
  [voineali #4416]
* Feature: Made Exibit edit page more user friendly (WYSIWYG)
  [voineali #4417]
* Feature: JSON Converter handles column types if specified in CSV columns
  header (ex: Title:lable, Year:date, etc)
  [voineali #4414]
* Feature: Added 'Details' column for 'Tabular View'. This can be
  enabled/disabled in 'Tabular View' settings.
  [voineali #4419]

1.2 - (2011-04-07)
------------------
* Feature: Added edit form for generated JSON