@@ -7,6 +7,9 @@ Changelog
 * Upgrade step: Within "Plone > Site setup > Add-ons" click on
   upgrade button available for eea.daviz
   [voineali #4866]
+* Feature: Moved facets in global settings tab in order to have more space
+  for views configuration
+  [voineali #4914]
 * Feature: Added a CSS class on section tabs
   [voineali #4880]
 * Feature: Redirects to daviz-edit if there is no DaViz view/chart configured
